Make room for app bar

--- a/src/app/Application/styles.less
+++ b/src/app/Application/styles.less
@@ -6,6 +6,10 @@ body, html {
   background: darken(white, 10%);
 }
 
+.app-inner {
+  padding-top: 80px;
+}
+
 .app-bar-icon-size() {
   @height: 36px;
 
